# comprende_ya

./: .env.example  .gitignore  CLAUDE.md  DOCKER.md  LICENSE  README.md  debug-frontend.sh  debug-restart.sh  docker-compose.yaml  package.json  vite.config.ts
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ec4b4ee0c36_add_videosegments.py  2e27141dd6c1_add_frase_exercise_table.py  375de2969af7_remove_h5p_content.py  6554f5747ad9_initial_migration_videos_and_questions_.py  c6440d9b9453_change_h5p_content_type_to_json.py  cd3ded574f5e_add_answer_progress_table.py
backend/src/: config.py  db.py  main.py
backend/src/api/routes/: videos.py
backend/src/flows/: video_processing.py
backend/src/models/: database.py  schemas.py
backend/src/repositories/: __init__.py  classifier_repository.py  exercise_repository.py  progress_repository.py  segments_repository.py  video_repository.py
backend/src/services/: dialect_classifier.py  frase_exercise_generator.py  h5p.py  questions.py  segments.py  transcription.py  youtube.py  youtube_search.py  youtube_transcript.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: router.tsx  styles.css
src/: routeTree.gen.ts  tailwind.config.ts
src/components/: FillInBlankExercise.tsx  FillInBlankExercisesList.tsx  FlowStatusDisplay.tsx  ProcessingStatus.tsx  TimestampedQuestionsList.tsx  VideoInput.tsx  YouTubeSearch.tsx
src/hooks/: useFlowStatus.ts
src/routes/: index.tsx  (+1 more)
(+14 files in other folders)
